- input fields and buttons became modular, no longer constrainted to just string contents - mouse handling revamp