@@ -1,15 +1,9 @@
 package ui10.decoration.views;
 
-import ui10.base.Container;
-import ui10.base.Element;
-import ui10.base.EventContext;
-import ui10.base.InputHandler;
-import ui10.binding.ListChange;
-import ui10.binding5.ElementEvent;
-import ui10.controls.Label;
+import ui10.base.*;
+import ui10.binding7.PropertyBasedView;
+import ui10.controls.TextView;
 import ui10.controls.TabbedPane;
-import ui10.controls.TabbedPane.TabSelected;
-import ui10.controls.TabbedPane.TabsChanged;
 import ui10.decoration.Style;
 import ui10.decoration.StyleableContainer;
 import ui10.geom.Axis;
@@ -18,21 +12,32 @@ import ui10.layout.Layouts;
 import ui10.layout.LinearLayout;
 import ui10.layout.LinearLayoutBuilder;
 
+import java.util.stream.Collectors;
+
 import static ui10.layout.Layouts.HorizontalAlignment.LEFT;
 
-public class StyleableTabbedPaneView extends StyleableView<TabbedPane, StyleableTabbedPaneView.TabbedPaneStyle>
-        implements TabbedPane.TabbedPaneListener {
+public class StyleableTabbedPaneView extends PropertyBasedView<TabbedPane, StyleableTabbedPaneView.TabbedPaneStyle> {
 
-    private LinearLayout<TabButton> tabButtons;
+    private LinearLayout<TabButton> tabButtons = new LinearLayout<>(Axis.HORIZONTAL);
     private final TabPaneContent content = new TabPaneContent();
+    private TabButton prevSelected;
 
     public StyleableTabbedPaneView(TabbedPane model) {
         super(model);
     }
 
-    @Setup
-    void init() {
-        tabButtons = new LinearLayout<>(Axis.HORIZONTAL, model.tabs().streamBinding().map(TabButton::new).toList());
+    @Override
+    protected void validateImpl() {
+        if (model.dirtyProperties().contains(TabbedPane.TabPaneProperty.TABS)) {
+            tabButtons.elements().clear();
+            tabButtons.elements().addAll(model.tabs().stream().map(TabButton::new).collect(Collectors.toList()));
+        }
+        if (model.dirtyProperties().contains(TabbedPane.TabPaneProperty.SELECTED_TAB)) {
+            if (prevSelected != null)
+                prevSelected.refresh();
+            (prevSelected = tabButton(model.selectedTab())).refresh();
+            content.refresh();
+        }
     }
 
     @Override
@@ -43,34 +48,6 @@ public class StyleableTabbedPaneView extends StyleableView<TabbedPane, Styleable
                 add(0, tabHeaderArea).
                 add(1, content).
                 build();
-    }
-
-    @Override
-    public void tabsChanged(ListChange<Element> change) {
-    }
-
-    @Override
-    public void selectedTabChanged(Element oldSelectedTab, Element newSelectedTab) {
-        if (oldSelectedTab != null)
-            tabButton(oldSelectedTab).refresh();
-        tabButton(newSelectedTab).refresh();
-        content.refresh();
-    }
-
-    public void handleModelEvent(ElementEvent event) {
-        switch (event) {
-            case TabsChanged e -> {
-                e.change().applyOn(tabButtons.elements(), TabButton::new);
-            }
-            case TabSelected e -> {
-                if (e.oldValue() != null)
-                    tabButton(e.oldValue()).refresh();
-                tabButton(e.newValue()).refresh();
-                content.refresh();
-            }
-            default -> {
-            }
-        }
     }
 
     private TabButton tabButton(Element tab) {
@@ -87,15 +64,27 @@ public class StyleableTabbedPaneView extends StyleableView<TabbedPane, Styleable
     public class TabButton extends StyleableContainer<TabButton.TabButtonStyle> implements InputHandler {
 
         private final Element tab;
-        private final Label tabButtonLabel;
+        private final TextView tabButtonLabel;
 
         public TabButton(Element tab) {
             this.tab = tab;
-            tabButtonLabel = new Label(TabbedPane.Tab.of(tab).title());
+            tabButtonLabel = new TextView(TabbedPane.Tab.of(tab).title());
         }
 
         void refresh() {
-            decoration().selectedChanged();
+            if (decoration() != null)
+                decoration().selectedChanged();
+        }
+
+        @Override
+        protected Element content() {
+            return new MouseTarget(super.content()) {
+                @Override
+                public DragHandler handlePress(MouseEvent.MousePressEvent event) {
+                    model.selectedTab(tab);
+                    return null;
+                }
+            };
         }
 
         @Override
@@ -105,12 +94,6 @@ public class StyleableTabbedPaneView extends StyleableView<TabbedPane, Styleable
 
         public boolean isSelected() {
             return tab == model.selectedTab();
-        }
-
-        @InputHandler.EventHandler
-        private void onMousePress(MouseEvent.MousePressEvent event, EventContext eventContext) {
-            //focusContext().focusedControl.set(this);
-            model.selectedTab(tab);
         }
 
         public interface TabButtonStyle extends Style {
